rdsapp-qal/rdsapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-alias: myapp.rdsapp.com
  labels:
    app: rdsapp1
  name: rdsapp-ingress

spec:
  rules:
  - host: myapp.rdsapp.com
    http:
      paths:
      - backend:
          serviceName: rdsapp1-service
          servicePort: 8080
        path: /
